first wu Eldoria Realms

--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: home
 author_profile: true
 ---
-<a href="Cyber_Apocalypse_CTF_2025_Tales_from_Eldoria.html">Cyber Apocalypse CTF 2025: Tales from Eldoria</a><br>
+<a href="Cyber_Apocalypse_CTF_2025_Tales_from_Eldoria/">Cyber Apocalypse CTF 2025: Tales from Eldoria</a><br>
